# kanji_tree

./: .gitignore  Cargo.toml  Protocol.md  README.md  build.rs  kanji.json  kanji_test_with_dead_kanji.json  kanji_test_with_separate_kanji_and_radical.json  kanji_test_with_three_kanji.json  kanji_test_with_x_part.json
resources/: kanji.json
resources/test/: kanji_test_for_child_order.json  kanji_test_for_parent_order.json  kanji_test_for_typed_child_order.json  kanji_test_with_dead_parent.json  kanji_test_with_duplicate_name.json  kanji_test_with_kana.json  kanji_test_with_missing_image.json  kanji_test_with_water_kanji_and_radical.json  kanji_test_with_x_part.json
src/: app.rs  copy_button.rs  fonts.rs  kanji_button.rs  kanji_panel.rs  kanji_parser.rs  kanji_source.rs  keys.rs  kigou_button.rs  kigou_display_active.rs  kigou_display_builder.rs  kigou_display_buttons.rs  kigou_panel.rs  kigou_parser.rs  kigou_source.rs  lib.rs  main.rs  message.rs  recent_panel.rs  reload_button.rs  search_panel.rs  validation_error.rs  value_objects.rs
src/value_objects/: dead_kanji.rs  kana.rs  kanji.rs  kanji_json.rs  kanji_node.rs  kigou.rs  kigou_type.rs  node_container.rs  node_type.rs  parsed_kanji_json_element.rs  radical.rs  radical_node.rs  x_part.rs
