[package]
name = "kanji_tree"
version = "1.1.0"
edition = "2021"
authors = ["Kira Resari <kira.resari@tri-tail.com>"]
description = "A GUI app for a Kanji Tree"
repository = "https://github.com/KiraResari/kanji_tree"
licence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgpu"]
# Enables the `iced_wgpu` renderer
wgpu = ["iced_wgpu"]
# Enables the `Image` widget
image = ["iced_wgpu/image"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
iced = {version = "0.3", features = ["image"] }
iced_wgpu = { version = "0.4", optional = true }