[package]
name = "kanji_tree"
version = "2.4.0"
edition = "2021"
authors = ["Kira Resari <kira.resari@tri-tail.com>"]
description = "A GUI app for a Kanji Tree"
repository = "https://github.com/KiraResari/kanji_tree"

[features]
default = ["wgpu"]
wgpu = ["iced_wgpu"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
iced = {version = "0.3", features = ["image"] }
iced_wgpu = { version = "0.4", optional = true }
image = {version = "0.24.1", features = ["ico"] }
druid = "0.7.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"